// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col w-96 max-w-[100vw] px-4 mb-8"
    >
      <div
        aria-orientation="horizontal"
        class="tab-group"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-:r2:"
          aria-selected="true"
          class="tab-option tab-option-selected"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r0:"
          role="tab"
          tabindex="0"
          type="button"
        >
          Plant
        </button>
        <button
          aria-controls="headlessui-tabs-panel-:r4:"
          aria-selected="false"
          class="tab-option"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r1:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Group
        </button>
      </div>
      <div
        class="my-4 md:my-8"
      >
        <div
          aria-labelledby="headlessui-tabs-tab-:r0:"
          data-headlessui-state="selected"
          id="headlessui-tabs-panel-:r2:"
          role="tabpanel"
          tabindex="0"
        >
          <form
            class="flex flex-col gap-4"
            id="plantDetails"
          >
            <label
              class="relative"
            >
              <span>
                Plant name
              </span>
              <input
                class="input w-full"
                name="name"
                pattern=".{0,50}"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label
              class="relative"
            >
              <span>
                Plant species
              </span>
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                autocomplete="off"
                class="input w-full"
                data-headlessui-state=""
                id="headlessui-combobox-input-:r3:"
                name="species"
                pattern=".{0,50}"
                role="combobox"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label>
              <span>
                Pot size
              </span>
              <input
                class="input w-full"
                inputmode="numeric"
                name="pot_size"
                type="text"
                value=""
              />
            </label>
            <label
              class="relative"
            >
              <span>
                Description
              </span>
              <textarea
                class="textarea w-full"
                name="description"
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
          </form>
        </div>
        <span
          aria-hidden="true"
          aria-labelledby="headlessui-tabs-tab-:r1:"
          id="headlessui-tabs-panel-:r4:"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
      </div>
      <button
        class="btn btn-accent mx-auto"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`App matches snapshot when changing group QR code 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col text-center gap-4 px-4 mt-2 mb-4"
    >
      <p
        class="text-lg md:text-xl font-bold"
      >
        Is this the new QR code for your group?
      </p>
      <div
        class="card p-4 gap-4"
      >
        <span
          class="text-xl font-bold text-center"
        >
          Test Group
        </span>
        <div
          class="collapse group"
        >
          <input
            checked=""
            class="hidden pointer-events-none"
            id="showDetails"
            type="checkbox"
          />
          <div
            class="collapse-content mx-auto max-w-72 w-full"
          >
            <p
              class="flex"
            >
              <span
                class="font-semibold break-keep mr-4"
              >
                Location:
              </span>
              <span
                class="ml-auto text-right line-clamp-1 break-all"
              >
                Nowhere
              </span>
            </p>
          </div>
        </div>
      </div>
      <div
        class="flex gap-4 mx-auto"
      >
        <button
          class="btn h-12 btn-error btn-square text-white"
          title="Don't change QR code"
        >
          <svg
            class="size-6"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
            />
          </svg>
        </button>
        <button
          class="btn h-12 btn-success btn-square text-white"
          title="Change QR code"
        >
          <svg
            class="size-6"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`App matches snapshot when changing plant QR code 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col text-center gap-4 px-4 mt-2 mb-4"
    >
      <p
        class="text-lg md:text-xl font-bold"
      >
        Is this the new QR code for your plant?
      </p>
      <div
        class="card p-4 gap-4"
      >
        <span
          class="text-xl font-bold text-center"
        >
          Test Plant
        </span>
        <img
          alt="Test Plant photo"
          class="rounded-xl object-cover aspect-square w-full"
          draggable="false"
          src="/media/previews/photo_preview.webp"
        />
        <div
          class="collapse group"
        >
          <input
            class="hidden pointer-events-none"
            id="showDetails"
            type="checkbox"
          />
          <div
            class="collapse-title min-h-0 text-sm md:text-base"
          >
            <label
              aria-label="Show details"
              class="transition-opacity duration-300 group-has-checked:opacity-0"
              for="showDetails"
              tabindex="-1"
            >
              Show details
            </label>
          </div>
          <div
            class="collapse-content mx-auto max-w-72 w-full"
          >
            <p
              class="flex"
            >
              <span
                class="font-semibold break-keep mr-4"
              >
                Species:
              </span>
              <span
                class="ml-auto text-right line-clamp-1 break-all"
              >
                Calathea
              </span>
            </p>
            <p
              class="flex"
            >
              <span
                class="font-semibold break-keep mr-4"
              >
                Pot size:
              </span>
              <span
                class="ml-auto text-right line-clamp-1 break-all"
              >
                4
              </span>
            </p>
            <div
              class="text-center"
            >
              <p
                class="font-semibold mt-3"
              >
                Description:
              </p>
              <p
                class="text-sm line-clamp-6 break-anywhere"
              >
                This is a plant with a long description
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex gap-4 mx-auto"
      >
        <button
          class="btn h-12 btn-error btn-square text-white"
          title="Don't change QR code"
        >
          <svg
            class="size-6"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
            />
          </svg>
        </button>
        <button
          class="btn h-12 btn-success btn-square text-white"
          title="Change QR code"
        >
          <svg
            class="size-6"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`App matches snapshot when group querystring param is present 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col w-96 max-w-[100vw] px-4 mb-8"
    >
      <div
        aria-orientation="horizontal"
        class="tab-group"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-:r7:"
          aria-selected="false"
          class="tab-option"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r5:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Plant
        </button>
        <button
          aria-controls="headlessui-tabs-panel-:r8:"
          aria-selected="true"
          class="tab-option tab-option-selected"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r6:"
          role="tab"
          tabindex="0"
          type="button"
        >
          Group
        </button>
      </div>
      <div
        class="my-4 md:my-8"
      >
        <span
          aria-hidden="true"
          aria-labelledby="headlessui-tabs-tab-:r5:"
          id="headlessui-tabs-panel-:r7:"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
        <div
          aria-labelledby="headlessui-tabs-tab-:r6:"
          data-headlessui-state="selected"
          id="headlessui-tabs-panel-:r8:"
          role="tabpanel"
          tabindex="0"
        >
          <form
            class="flex flex-col gap-4"
            id="groupDetails"
          >
            <label
              class="relative"
            >
              <span>
                Group name
              </span>
              <input
                class="input w-full"
                name="name"
                pattern=".{0,50}"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label
              class="relative"
            >
              <span>
                Group location
              </span>
              <input
                class="input w-full"
                name="location"
                pattern=".{0,50}"
                type="text"
                value=""
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
            <label
              class="relative"
            >
              <span>
                Description
              </span>
              <textarea
                class="textarea w-full"
                name="description"
              />
              <p
                aria-hidden="true"
                class="invalid-input-label"
              >
                too long!
              </p>
            </label>
          </form>
        </div>
      </div>
      <button
        class="btn btn-accent mx-auto"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`App matches snapshot when plant division in progress 1`] = `
<div>
  <div
    class="container flex flex-col mx-auto items-center"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              User profile
            </a>
          </li>
          <li>
            <button>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        title="Scroll to top"
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold"
            role="heading"
            tabindex="-1"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Registration
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col text-center gap-4 px-4 mt-2 mb-4"
    >
      <p
        class="text-lg md:text-xl font-bold"
      >
        Was this plant divided from Test Plant?
      </p>
      <div
        class="card p-4 gap-4"
      >
        <span
          class="text-xl font-bold text-center"
        >
          Test Plant
        </span>
        <img
          alt="Test Plant photo"
          class="rounded-xl object-cover aspect-square w-full"
          draggable="false"
          src="/media/previews/photo_preview.webp"
        />
        <div
          class="collapse group"
        >
          <input
            class="hidden pointer-events-none"
            id="showDetails"
            type="checkbox"
          />
          <div
            class="collapse-title min-h-0 text-sm md:text-base"
          >
            <label
              aria-label="Show details"
              class="transition-opacity duration-300 group-has-checked:opacity-0"
              for="showDetails"
              tabindex="-1"
            >
              Show details
            </label>
          </div>
          <div
            class="collapse-content mx-auto max-w-72 w-full"
          >
            <p
              class="flex"
            >
              <span
                class="font-semibold break-keep mr-4"
              >
                Species:
              </span>
              <span
                class="ml-auto text-right line-clamp-1 break-all"
              >
                Calathea
              </span>
            </p>
            <p
              class="flex"
            >
              <span
                class="font-semibold break-keep mr-4"
              >
                Pot size:
              </span>
              <span
                class="ml-auto text-right line-clamp-1 break-all"
              >
                4
              </span>
            </p>
          </div>
        </div>
      </div>
      <div
        class="flex gap-4 mx-auto"
      >
        <button
          class="btn h-12 btn-error btn-square text-white"
          title="Plant was NOT divided"
        >
          <svg
            class="size-6"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
            />
          </svg>
        </button>
        <button
          class="btn h-12 btn-success btn-square text-white"
          title="Plant was divided"
        >
          <svg
            class="size-6"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
